点菜需求开发

--- a/pages/foodadd/foodadd.wxml
+++ b/pages/foodadd/foodadd.wxml
@@ -178,5 +178,5 @@
         </view>
       </view>
   </view>
-  <view class='bottom_content'>继续加菜</view>
+  <view class='bottom_content' bindtap='handleClickAddFoodButton'>继续加菜</view>
 </view>
