--- a/pages/message/message.wxml
+++ b/pages/message/message.wxml
@@ -3,13 +3,14 @@
 <view class='container'>
   <view class='un_empty' wx:if='{{msgs.length}}'>
     <block wx:for='{{msgs}}' wx:key='{{index}}'>
-      <view class='list' data-id='{{item.target}}' data-title='{{item.title}}' bindtap='goToTheDetail'>
+      <view class='list' data-id='{{item.target}}' data-title='{{item.title}}' data-type='{{item.type}}' bindtap='goToTheDetail'>
         <view class='title'>{{item.title}}</view>
         <view class='subTitle' wx:if="{{false}}">你的酒店已预订成功2</view>
         <view class='introduce'>{{item.content}}</view>
+        <view class='comment_tips' wx:if='{{item.title === "待点评通知"}}'>感谢您使用妥妥得，带您妥妥得日本旅行。</view>
         <view class='bottom'>
           <view class='date'>{{dateFr.getOrderDate(item.createAt)}}</view>
-          <view class='detail'>查看详情></view>
+          <view class='detail'>{{item.type === "foodqueue" ? "提前点菜" : "查看详情"}}></view>
         </view>
       </view>
     </block>
