--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -1,7 +1,7 @@
 <!-- book.wxml -->
 <view class='container'>
   <view class='header'>
-    <view class='text active'>预定</view>
+    <view class='text active'>预订</view>
     <view class='arrow'>
       <image src='../../img/book/arrow_active.png'></image>
     </view>
@@ -13,7 +13,7 @@
   </view>
   <view class='book_form'>
     <view class='form_title'>
-      <view class='title_text'>预定信息</view>
+      <view class='title_text'>预订信息</view>
     </view>
     <view class='single'>
       <view class='single_text'>用餐日期</view>
@@ -70,11 +70,11 @@
         <image src='../../img/book/cart_icon_radio.png' wx:else></image>
       </view>
     </view>
-    <view class='form_title no_border'>
+    <view class='form_title no_border' wx:if='{{goodsItem.length}}'>
       <view class='title_text'>套餐</view>
       <view class='title_tips'>注：套餐和服务费必须2选一</view>
     </view>
-    <view class='set_meal_ground'>
+    <view class='set_meal_ground' wx:if='{{goodsItem.length}}'>
       <block wx:for='{{goodsItem}}' wx:key='{{index}}'>
         <view class='set_meal' data-type='{{item.goodsItemInfo.giid}}' bindtap='handleChangeOrderType'>
           <view class='poster'>
