--- a/pages/myOrder/myOrder.wxml
+++ b/pages/myOrder/myOrder.wxml
@@ -101,7 +101,7 @@
           <view>已等{{dateFr.getLinePendingDateText(item.lineAt)}}</view>
         </view>
         <view class='right' wx:if='{{item.orderStatus !== 1}}'>
-          <button data-sn='{{item.sn}}' catchtap='goToTheFoodOrder'>点菜</button>
+          <button data-sn='{{item.sn}}' catchtap='goToTheFoodOrder' wx:if='{{false}}'>点菜</button>
         </view>
       </view>
     </view>
