--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -35,8 +35,8 @@
       </block>
     </swiper>
   </view>
-  <view class='classify'>
-    <view class='food' data-type='2' bindtap='goToTheProductList'>
+  <view class='classify' wx:if='{{foodTags.length || buyTags.length}}'>
+    <view class='food' data-type='2' bindtap='goToTheProductList' wx:if='{{foodTags.length}}'>
       <image src='../../img/index/food.png'></image>
       <view class='title'>
         <text>美食</text>
@@ -49,7 +49,7 @@
         </block>
       </view>
     </view>
-    <view class='shopping' data-type='5' bindtap='goToTheProductList'>
+    <view class='shopping' data-type='5' bindtap='goToTheProductList' wx:if='{{buyTags.length}}'>
       <image src='../../img/index/shopping.png'></image>
       <view class='title'>
         <text>购物</text>
