--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -144,7 +144,7 @@
       <view class='title_text'>联系方式</view>
     </view>
     <view class='single'>
-      <input value='{{preOrderInfo.contactor}}' placeholder='输入您的姓名' placeholder-class='ph_class' data-type='name' bindinput='handleChangeInputValue' maxlength='50'></input>
+      <input value='{{preOrderInfo.contactor}}' placeholder='输入您的姓名(英文/日文)' placeholder-class='ph_class' data-type='name' bindinput='handleChangeInputValue' maxlength='50'></input>
     </view>
     <view class='single'>
       <input value='{{preOrderInfo.mail}}' placeholder='邮箱' placeholder-class='ph_class' data-type='mail' bindinput='handleChangeInputValue' maxlength='50'></input>
