--- a/pages/lineUpDetail/lineUpDetail.wxss
+++ b/pages/lineUpDetail/lineUpDetail.wxss
@@ -38,6 +38,17 @@ image {
   box-sizing: border-box;
 }
 
+.queue.gray_bgc{
+  background-color: #C2C2C2;
+}
+
+.queue .status{
+  font-size: 22rpx;
+  line-height: 28rpx;
+  color: #fff;
+  text-align: center;
+}
+
 .queue .queue_single{
   font-size: 48rpx;
   line-height: 67rpx;
