--- a/pages/poi_detail/poi_detail.wxml
+++ b/pages/poi_detail/poi_detail.wxml
@@ -34,7 +34,9 @@
       <view class='business_hours' wx:if='{{goods.goodsInfo.openTime}}'>
         <view class='label'>营业时间：</view>
         <view class='text'>
-          <view class='date'>{{goods.goodsInfo.openTime}}</view>
+          <view class='date'>
+            <text>{{goods.goodsInfo.openTime}}</text>
+          </view>
           <!-- <view class='tips'>建议游玩时间为 8小时，这个也是内这个内…</view> -->
         </view>
       </view>
