--- a/pages/payresult/payresult.wxml
+++ b/pages/payresult/payresult.wxml
@@ -12,8 +12,8 @@
     </view>
     <view class='center'>
       <view class='tips' wx:if='{{result === "fail"}}'>请在 <text class='fail'>30</text> 分钟内完成付款，否则订单会被系统自动取消</view>
-      <view class='tips' wx:if='{{result === "success" && goodsItem.goodsItemInfo.gType !== 2}}'>将 {{dateFr.getSureDateText(goodsItem.goodsItemBase.confirmType)}}您的订单，请前往行程</view>
-      <view class='tips' wx:if='{{result === "success" && goodsItem.goodsItemInfo.gType === 2}}'>谢谢您的购买，请注意在有效期内前往用餐</view>
+      <view class='tips' wx:if='{{result === "success" && goodsItem.goodsItemInfo.gType !== 2 && !mid}}'>将 {{dateFr.getSureDateText(goodsItem.goodsItemBase.confirmType)}}您的订单，请前往行程</view>
+      <view class='tips' wx:if='{{result === "success" && (goodsItem.goodsItemInfo.gType === 2 || mid)}}'>谢谢您的购买，请注意在有效期内前往用餐</view>
     </view>
     <view class='bottom'>
       <button wx:if='{{result === "fail"}}' bindtap='handleClickAgainPayButton'>重新付款</button>
