--- a/pages/foodorder/foodorder.wxss
+++ b/pages/foodorder/foodorder.wxss
@@ -1,5 +1,4 @@
 /*隐藏滚动条*/
-
 ::-webkit-scrollbar {
   width: 0;
   height: 0;
@@ -8,6 +7,29 @@
 
 page {
   height: 100%;
+}
+
+.order_over {
+  padding-top: 300rpx;
+  text-align: center;
+}
+
+.order_over .foodorder_warning{
+  width: 112rpx;
+  height: 112rpx;
+  margin: 0 auto;
+}
+
+.order_over .foodorder_warning image{
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.order_over .text{
+  font-size: 32rpx;
+  color: #666;
+  margin-top: 26rpx;
 }
 
 .container {
